--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </div>
     <div class="preguntasportema"> 
 <fieldset>
-	<legend>Cuestionario Redes Sociales</legend>
+	<legend>Repaso Redes Sociales</legend>
 	<div id="test">
 		<div class="cuestion">1. “Sirve a las empresas para diferenciarse en internet”. La definici&oacute;n anterior corresponde a:</div>
 		<div class="respuestas">
