--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 		<source src="Módulo 5_Social Media.mp4" type="video/mp4" />
 	</video>
 </div>
+	<!-- Botón de transcripción -->
+	<a href="#script"><button class="botontranscripcion">Transcripción</button></a>
 	<!-- Preguntas -->
     <div class="preguntasportema"> 
 <fieldset>
@@ -167,5 +169,82 @@
        </div>
 
 </fieldset>
+	<!-- Transcripción -->
+	<a name="script">
+	<div class ="transcription">
+		<p dir="ltr"><strong>Transcripci&oacute;n Redes Sociales</strong></p>
+
+<p dir="ltr">&iexcl;Saludos!</p>
+
+<p dir="ltr">Les doy la bienvenida al tema &ldquo;Redes Sociales&rdquo;.</p>
+
+<p dir="ltr">En este &aacute;mbito hay dos conceptos importantes a resaltar.</p>
+
+<p dir="ltr">Para comenzar, la identidad digital es esa esencia con la que se identifican las empresas en redes sociales. Por otra parte, la reputaci&oacute;n online es la opini&oacute;n que forma el p&uacute;blico con base en la identidad digital.</p>
+
+<p dir="ltr">Las redes sociales cuentan con ciertos riesgos que se deben tomar en cuenta. Entre ellos:</p>
+
+<ul>
+	<li dir="ltr">
+
+		<p dir="ltr">Acceso no autorizado a los perfiles y cuentas: Permite acceder a informaci&oacute;n confidencial y/o modificar datos con la finalidad de arruinar la reputaci&oacute;n de la empresa o usuario.</p>
+	</li>
+	<li dir="ltr">
+
+		<p dir="ltr">Suplantaci&oacute;n de perfiles: Es frecuente en perfiles comerciales para robar datos.</p>
+	</li>
+	<li dir="ltr">
+
+		<p dir="ltr">Mala gesti&oacute;n de la identidad online: Cuando no se tienen los conocimientos necesarios, se pueden causar da&ntilde;os reputacionales a una empresa a trav&eacute;s de las redes sociales.</p>
+	</li>
+	<li dir="ltr">
+
+		<p dir="ltr">Fugas de informaci&oacute;n: A trav&eacute;s de las conversaciones privadas en redes sociales.</p>
+	</li>
+</ul>
+
+<p dir="ltr">Dado al nivel de vulnerabilidad de las redes sociales, los ataques a nivel empresarial pueden llegar de varias maneras:</p>
+
+<ul>
+	<li dir="ltr">
+
+		<p dir="ltr">Ataques de ingenier&iacute;a social: Puede utilizarse el smishing o phishing para suplantar la identidad de la persona usuaria o de una plataforma de servicios para solicitar credenciales.</p>
+	</li>
+	<li dir="ltr">
+
+		<p dir="ltr">Contrase&ntilde;as inseguras: Las contrase&ntilde;as poco robustas, constantes o iguales en otros servicios, permiten al ciberatacante entrar con facilidad.</p>
+	</li>
+	<li dir="ltr">
+
+		<p dir="ltr">Empleados descontentos (insiders): Puede actuar de manera perjudicial para la reputaci&oacute;n y/o la informaci&oacute;n confidencial de la empresa.</p>
+	</li>
+</ul>
+
+<p dir="ltr">Ante estos riesgos, se pueden tomar algunas medidas de seguridad, entre ellas:</p>
+
+<ul>
+	<li dir="ltr">
+
+		<p dir="ltr">Gestores de contrase&ntilde;as:Almacena credenciales de manera segura, genera contrase&ntilde;as robustas y gestiona recursos compartidos.</p>
+	</li>
+	<li dir="ltr">
+
+		<p dir="ltr">Herramientas multifactor: Evita que el ciberatacante ingrese al perfil.</p>
+	</li>
+	<li dir="ltr">
+
+		<p dir="ltr">Concientizaci&oacute;n: Permite detectar y prevenir posibles ciberataques, adem&aacute;s de disminuir sus consecuencias.</p>
+	</li>
+	<li dir="ltr">
+
+		<p dir="ltr">Estrategia de redes sociales: A nivel empresarial, las personas que gestionen el perfil, deben tener una estrategia com&uacute;n.</p>
+	</li>
+	<li dir="ltr">
+
+		<p dir="ltr">Verificar los perfiles de redes sociales: Permite a los usuarios tener certeza de que la cuenta es verdadera, con lo que se evita la suplantaci&oacute;n de identidad.</p>
+	</li>
+</ul>
+</div>
+</a>
 </body>
 </html>
